--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">Khanyisile Mkhatswa</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a href="#" target="_blank"> https://github.com/Khanyi-Mkhatswa/my-weather-project</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
