--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
+                <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2">
+             <div class="weather-forecast date"
+              Sun
+              <img 
+              src="https://freepngimg.com/png/76818-forecasting-material-rain-shower-weather-icon"
+              alt=""
+              width="36"
+              />
+              18 12
+            </div>
       </main>
       <footer>
         <p>
